# fin-swift-rs

./: .gitignore  Cargo.toml
src/: block.rs  blocks.rs  main.rs  message.rs  mt940.rs  tag.rs  tags.rs  utils.rs
src/test_messages/: basic_test_2.txt  basic_test_3.txt  basic_test_4.txt
tests/: basic_test.txt  basic_test_3.txt
