[package]
name = "fin-swift-rs"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
chrono = { Version = "0.4.20", features = ["serde"]}
iso_currency = { version = "0.4.1", features = ["with-serde"] }
iso3166-1 = "1.0.1"
uuid = { Version = "1.1.1", features = ["serde"]}
serde = { Version = "1.0.138", features = ["derive"]}
serde_json = "1.0.82"
anyhow = "1.0"
